# cpullm.cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: cpullm-cli.cpp
benchmarks/: bench_core.cpp  bench_gguf_q4.cpp
docs/: architecture.md  architecture_registry.md  gguf_loader.md  gguf_tensor_types.md  graph_executors.md  inference_engine.md  llama_compatibility.md  mtp.md  production_readiness.md  real_executor.md  speculative_decoding.md  speculative_fallback.md  tokenizer_parity.md  universal_acceleration.md
docs/benchmarks/: lfm25_230m_q4_cpu.md  lfm25_230m_q4_cpu_after_real_ops.md
examples/: minimal.cpp  toy-model.yml
include/cpullm/: cpullm.hpp  executor.hpp  llama_compat.h  ops.hpp  plan.hpp  residency.hpp
scripts/: benchmark_lfm25_230m_q4_cpu.py
src/: arena.cpp  cpu.cpp  engine.cpp  executor.cpp  gguf.cpp  graph.cpp  llama_compat.cpp  matmul.cpp  model.cpp  mtp.cpp  ops.cpp  plan.cpp  quant.cpp  residency.cpp  sampler.cpp  session.cpp  tensor.cpp  tokenizer.cpp
tests/: test_core.cpp  test_executor.cpp  test_ops.cpp  test_plan.cpp  test_quant_kernels.cpp  test_residency.cpp  test_tokenizer.cpp
